<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NaivyBeats</string>
    <string name="password_editText_eng">Password</string>
    <string name="user_name_editText_eng">User</string>
    <string name="button_continue_eng">Continue</string>
    <string name="text_dont_have_user_eng">If you not have an account, Sign up here!</string>
    <string name="text_have_user_eng">If you have an account, Login here!</string>
    <string name="title_choose_type_user_eng">Which side are you on?</string>
    <string name="title_option_musician_eng">Artist</string>
    <string name="title_option_local_eng">Space</string>
    <string name="title_create_user_eng">Create your new Account!</string>
    <string name="complet_name_editText_eng">Name</string>
    <string name="surname_editText_eng">Surname</string>
    <string name="email_editText_eng">Email</string>
    <string name="phone_numbre_editText_eng">Phone Number</string>
    <string name="name_place_editText_eng">Name of the space</string>
    <string name="title_get_direction_eng">Give us your complet loacation</string>
    <string name="auto_complet_province_eng">Select a province</string>
    <string name="auto_complet_municipality_eng">Select a municipality</string>
    <string name="editText_complet_adress_eng">Write your adress</string>
    <string name="title_chose_preferences_artist_eng">Tell us about your preferences!</string>
    <string name="title_chose_preferences_time_eng">when you like to perform?</string>
    <string name="title_chose_preferences_style_eng">What style of music do you prefer?</string>
    <string name="button_morning_eng">Morning</string>
    <string name="button_afernoon_eng">Afternoon</string>
    <string name="button_night_eng">Night</string>
    <string name="button_whenever_eng">Whenever</string>
    <string name="button_tecno_eng">Tecno</string>
    <string name="button_blues_eng">Blues</string>
    <string name="button_reggueton_eng">Reggueton</string>
    <string name="button_jazz_eng">Jazz</string>
    <string name="button_rock_eng">Rock</string>
    <string name="button_pop_eng">Pop</string>
    <string name="button_hiphop_eng">Hip-hop</string>
    <string name="button_clasic_eng">Classic</string>
    <string name="button_flamenco_eng">Flamenco</string>
    <string name="button_trap_eng">Trap</string>
    <string name="home_button_menu_eng">Home</string>
    <string name="search_button_menu_eng">Search</string>
    <string name="edit_button_menu_eng">Edit</string>
    <string name="publicate_button_menu_eng">Publicate</string>
    <string name="chat_button_menu_eng">Chat</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_eng">Description</string>
    <string name="prefered_styles_eng">Prefered styles</string>
    <string name="read_more_eng">Read more</string>
    <string name="read_less_eng">Read less</string>
    <string name="postulate_eng">Postulate</string>
    <string name="all_ready_postulated_eng">Already postulated</string>
    <string name="follow_eng">Follow</string>
    <string name="following_eng">Unfollow</string>
    <string name="send_oferr_eng">Send Offer</string>
    <string name="offer_sended_eng">Offer sended</string>
    <string name="title_publicaction_content_eng">Publication</string>
    <string name="publication_foto_video_eng">Photo|Video</string>
    <string name="publication_title_eng">Title</string>
    <string name="description_title_eng">Description</string>
    <string name="publicate_button_eng">Publicate</string>
    <string name="title_publicaction_offer_eng">New Offer</string>
    <string name="salary_new_offer_eng">Salary</string>
    <string name="date_new_offer_eng">Date</string>
    <string name="schedule_new_offer_eng">Schedule</string>
    <string name="styles_new_offer_eng">Styles</string>
    <string name="followers_eng">Followers</string>
    <string name="appreciation_eng">Appreciation</string>
    <string name="address_eng">Address</string>
    <string name="save_eng">Save</string>
    <string name="wellcome_eng">Welcome </string>
    <string name="question_login_eng">What you want to do today?</string>
    <string name="search_offers_eng">Search for offers</string>
    <string name="search_artist_eng">Search for artist</string>
    <string name="filter_eng">Filter</string>
    <string name="ubication_eng">Ubication</string>
    <string name="max_salary_eng">Max salary</string>
    <string name="minimum_salary_eng">Min salary</string>
    <string name="minimum_appreciation_eng">Min appreciation</string>
    <string name="minimum_hours_eng">Min hours</string>
    <string name="max_hours_eng">Max hours</string>
    <string name="out_eng">Out</string>
    <string name="experience_eng">Experience</string>
    <string name="events_eng">Events</string>
    <string name="new_offer_eng">New Offer</string>
    <string name="houres_eng">Houres</string>
    <string name="time_eng">Time</string>
    <string name="accept_eng">Accept</string>
    <string name="decline_eng">Decline</string>
    <string name="data_publication_eng">Fill in all the necessary information</string>
    <string name="no_style_eng">This offer not have any style</string>
    <string name="send_eng">Send</string>
    <string name="send_message_eng">Send a message to the Restaurant</string>
    <string name="doesnt_exist_text_eng">You have to write a message to Restaurant</string>
    <string name="cancel_eng">Cancel</string>
    <string name="total_likes_eng">Total Likes</string>
    <string name="total_offers_eng">Total offers</string>
    <string name="total_concerts_done_eng">Concerts done</string>
</resources>