<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_light"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ImageView
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_trans"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/beig"
            android:textSize="28dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:text="@string/title_chose_preferences_artist_eng"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/subtitle_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/beig"
            android:textSize="23dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/title_chose_preferences_time_eng"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/morning"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_margin="11dp"
                app:backgroundTint="@null"
                android:background="@drawable/design_button_type_choose_not_pressed"
                android:text="@string/button_morning_eng"
                android:padding="0dp"
                android:textColor="@color/bluesky"/>
            <Button
                android:id="@+id/afternoon"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_margin="11dp"
                app:backgroundTint="@null"
                android:background="@drawable/design_button_type_choose_not_pressed"
                android:text="@string/button_afernoon_eng"
                android:padding="0dp"
                android:textColor="@color/bluesky"/>

            <Button
                android:id="@+id/night"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_margin="11dp"
                app:backgroundTint="@null"
                android:background="@drawable/design_button_type_choose_not_pressed"
                android:text="@string/button_night_eng"
                android:padding="0dp"
                android:textColor="@color/bluesky"/>
            <Button
                android:id="@+id/whenever"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_margin="11dp"
                app:backgroundTint="@null"
                android:background="@drawable/design_button_type_choose_not_pressed"
                android:text="@string/button_whenever_eng"
                android:padding="0dp"
                android:textColor="@color/bluesky"/>
        </LinearLayout>

        <TextView
            android:id="@+id/subtitle_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/beig"
            android:textSize="23dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:text="@string/title_chose_preferences_style_eng"
            android:textStyle="bold"
            />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <Button
            android:id="@+id/hiphop"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_margin="11dp"
            app:backgroundTint="@null"
            android:background="@drawable/design_button_type_choose_not_pressed"
            android:text="@string/button_hiphop_eng"
            android:padding="0dp"
            android:textColor="@color/bluesky"/>
        <Button
            android:id="@+id/pop"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_margin="11dp"
            app:backgroundTint="@null"
            android:background="@drawable/design_button_type_choose_not_pressed"
            android:text="@string/button_pop_eng"
            android:padding="0dp"
            android:textColor="@color/bluesky"/>

        <Button
            android:id="@+id/tecno"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_margin="11dp"
            app:backgroundTint="@null"
            android:background="@drawable/design_button_type_choose_not_pressed"
            android:text="@string/button_tecno_eng"
            android:padding="0dp"
            android:textColor="@color/bluesky"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/classic"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_margin="11dp"
                app:backgroundTint="@null"
                android:background="@drawable/design_button_type_choose_not_pressed"
                android:text="@string/button_clasic_eng"
                android:padding="0dp"
                android:textColor="@color/bluesky"/>
            <Button
                android:id="@+id/flamenco"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_margin="11dp"
                app:backgroundTint="@null"
                android:background="@drawable/design_button_type_choose_not_pressed"
                android:text="@string/button_flamenco_eng"
                android:padding="0dp"
                android:textColor="@color/bluesky"/>

            <Button
                android:id="@+id/reggueton"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_margin="11dp"
                app:backgroundTint="@null"
                android:background="@drawable/design_button_type_choose_not_pressed"
                android:text="@string/button_reggueton_eng"
                android:padding="0dp"
                android:textColor="@color/bluesky"/>
            <Button
                android:id="@+id/rock"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_margin="11dp"
                app:backgroundTint="@null"
                android:background="@drawable/design_button_type_choose_not_pressed"
                android:text="@string/button_rock_eng"
                android:padding="0dp"
                android:textColor="@color/bluesky"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/blues"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_margin="11dp"
                app:backgroundTint="@null"
                android:background="@drawable/design_button_type_choose_not_pressed"
                android:text="@string/button_blues_eng"
                android:padding="0dp"
                android:textColor="@color/bluesky"/>
            <Button
                android:id="@+id/jazz"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_margin="11dp"
                app:backgroundTint="@null"
                android:background="@drawable/design_button_type_choose_not_pressed"
                android:text="@string/button_jazz_eng"
                android:padding="0dp"
                android:textColor="@color/bluesky"/>

            <Button
                android:id="@+id/trap"
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_margin="11dp"
                app:backgroundTint="@null"
                android:background="@drawable/design_button_type_choose_not_pressed"
                android:text="@string/button_trap_eng"
                android:padding="0dp"
                android:textColor="@color/bluesky"/>
        </LinearLayout>
        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="200dp"
            android:textStyle="bold"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:background="@drawable/design_button"
            app:backgroundTint="@null"
            android:text="@string/button_continue_eng"
            android:textSize="25dp"
            android:textColor="@color/bluemarin">
        </Button>
        <TextView
            android:id="@+id/isUser"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:text="@string/text_have_user_eng"
            android:textColor="@color/bluesky"
            android:textSize="15dp"
            android:textStyle="bold|italic"
            />
    </LinearLayout>
</FrameLayout>