<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_light"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <ImageView
        android:id="@+id/filter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_trans"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/beig"
            android:textSize="28dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="20dp"
            android:text="@string/title_create_user_eng"
            android:textStyle="bold"
            />
        <EditText
            android:id="@+id/name"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/design_textbox"
            android:inputType="text"
            android:maxLines="1"
            android:layout_margin="5dp"
            android:textAlignment="center"
            android:textColor="@color/bluemarin"
            android:hint="@string/complet_name_editText_eng"
            android:textColorHint="@color/bluemarin_trans"
            android:imeOptions="actionDone"
            >
        </EditText>

        <EditText
            android:id="@+id/email"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/design_textbox"
            android:inputType="text"
            android:maxLines="1"
            android:layout_margin="5dp"
            android:textAlignment="center"
            android:textColor="@color/bluemarin"
            android:hint="@string/email_editText_eng"
            android:textColorHint="@color/bluemarin_trans"
            android:imeOptions="actionDone"
            >
        </EditText>
        <EditText
            android:id="@+id/number"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:inputType="number"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/design_textbox"
            android:maxLines="1"
            android:layout_margin="5dp"
            android:textAlignment="center"
            android:textColor="@color/bluemarin"
            android:hint="@string/phone_numbre_editText_eng"
            android:textColorHint="@color/bluemarin_trans"
            android:imeOptions="actionDone"
            >
        </EditText>
        <EditText
            android:id="@+id/password"
            android:layout_width="270dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/design_textbox"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_margin="5dp"
            android:textAlignment="center"
            android:textColor="@color/bluemarin"
            android:hint="@string/password_editText_eng"
            android:textColorHint="@color/bluemarin_trans"
            android:imeOptions="actionDone"
            >
        </EditText>
        <Button
            android:id="@+id/buttonContinue"
            android:layout_width="200dp"
            android:textStyle="bold"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="30dp"
            android:background="@drawable/design_button"
            app:backgroundTint="@null"
            android:text="@string/button_continue_eng"
            android:textSize="25dp"
            android:textColor="@color/bluemarin">
        </Button>
        <TextView
            android:id="@+id/isUser"
            android:layout_width="300dp"
            android:layout_height="20dp"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/text_have_user_eng"
            android:textColor="@color/bluesky"
            android:textSize="15dp"
            android:textStyle="bold|italic"
            />
    </LinearLayout>
</FrameLayout>