<?xml version="1.0" encoding="utf-8"?>
<FrameLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_menu"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:id="@+id/frameContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:layout_gravity="bottom"
        android:background="@color/bluemarin">
    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:gravity="center_horizontal"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_marginHorizontal="5dp"
            >
            <ImageView
                android:layout_marginTop="5dp"
                android:id="@+id/home"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/home_icon"
                android:layout_gravity="center"
                />
            <TextView
                android:id="@+id/textHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11dp"
                android:textStyle="bold"
                android:text="@string/home_button_menu_eng"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_marginHorizontal="5dp">
            <ImageView
                android:id="@+id/search"
                android:layout_marginTop="5dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/search_icon"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/textSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11dp"
                android:text="@string/search_button_menu_eng"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_marginHorizontal="5dp">
            <ImageView
                android:id="@+id/publicate"
                android:layout_width="50dp"
                android:layout_marginTop="5dp"
                android:layout_height="50dp"
                android:background="@drawable/publication_icon"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/textPublicate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11dp"
                android:text="@string/publicate_button_menu_eng"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:="5dp"
            android:layout_marginHorizontal="5dp">
            <ImageView
                android:id="@+id/chat"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/chat_icon"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/textChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11dp"
                android:text="@string/chat_button_menu_eng"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:orientation="vertical"
            android:layout_marginHorizontal="5dp">
            <ImageView
                android:id="@+id/edit"
                android:layout_width="50dp"
                android:layout_marginTop="5dp"
                android:layout_height="50dp"
                android:background="@drawable/edit_icon"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/textEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="11dp"
                android:text="@string/edit_button_menu_eng"
                android:textColor="@color/white"
                android:layout_gravity="center"/>
        </LinearLayout>
    </LinearLayout>


</FrameLayout>